# cila-substrate

./: CODEOWNERS  Cargo.toml  Dockerfile  README.md  run-docker.md
autotests/: .gitignore  README.md  package-lock.json  package.json  substrate.test.js
common/: Cargo.toml
common/src/: aggregate.rs  command.rs  event.rs  event_store.rs  lib.rs
docs/: aggregate.md  autotest.md  dispatcher.md  event-store.md  nft-aggregate.md
node/: Cargo.toml
pallets/dispatcher/: Cargo.toml
pallets/dispatcher/src/: lib.rs  weights.rs
pallets/event-store/: Cargo.toml
pallets/event-store/src/: lib.rs
pallets/nfts-aggregate/: Cargo.toml
pallets/nfts-aggregate/src/: aggregate.rs  lib.rs  state.rs
proto/: Cargo.toml
proto/src/: command.rs  event.proto  event.rs  lib.rs  operation.rs  utils.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
